testsuite/tests/ffi/should_fail/T7243.hs
module T7243 where

import Foreign.Ptr
foreign import ccall "wrapper" foo :: IO (FunPtr ())
