testsuite/tests/ffi/should_fail/T7243.stderr

T7243.hs:4:1: error: [GHC-91490]
    • Unacceptable type in foreign declaration: One argument expected
    • When checking declaration:
        foreign import ccall safe "wrapper" foo :: IO (FunPtr ())
